# Quantitative-Engine

./: CLAUDE.md  README.md
apps/engine/: batch_analyze.py  cli_fetch_symbols.py  cli_run_micro.py  pyproject.toml  start.sh
apps/engine/alembic/: env.py
apps/engine/alembic/versions/: 5d5e4deb843b_initial_schema.py
apps/engine/data/: engine.db
apps/engine/engine/: main.py  pipeline.py
apps/engine/engine/api/: routes_analysis.py  routes_monitor.py  routes_positions.py
apps/engine/engine/config/: engine.yaml  event_calendar.json  strategies.yaml  thresholds.yaml
apps/engine/engine/core/: bsm.py  greeks.py  payoff_engine.py  pricing.py
apps/engine/engine/db/: __init__.py  models.py  persist.py  session.py
apps/engine/engine/models/: alerts.py  batch_snapshot.py  context.py  micro.py  payoff.py  scenario.py  scores.py  snapshots.py  strategy.py
apps/engine/engine/monitor/: alert_engine.py  incremental_recalc.py  monitor_loop.py  snapshot_collector.py
apps/engine/engine/providers/: futu_client.py  meso_client.py  micro_client.py
apps/engine/engine/steps/: _s04_dir_iv.py  _s06_builders.py  _s06_helpers.py  s02_regime_gating.py  s03_pre_calculator.py  s04_field_calculator.py  (+5 more)
apps/engine/tests/: conftest.py  test_alert_engine.py  test_bsm.py  test_e2e.py  test_field_calculator.py  test_futu_enricher.py  test_greeks.py  test_incremental_recalc.py  test_payoff.py  test_pipeline.py  test_pre_calculator.py  test_pricing.py  test_regime_gating.py  test_scenario_analyzer.py  test_snapshot_collector.py  test_strategy_calculator.py  test_strategy_ranker.py
(+2 files in other folders)
