[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meso-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.9",
    "alembic>=1.13",
    "httpx>=0.27.0",
    "scipy>=1.13.0",
    "pyyaml>=6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["engine"]
